Fixed content on mobile.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: red;
+    background-color: burlywood;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -33,6 +33,8 @@ body {
 }
 
 button {
+    min-width: 120px;
+    font-size: 0.3em;
     background-color: burlywood;
     border-color: black;
     color: black;
